# Naive_Bayes_Project

./: README.md  main.ipynb  preprocessing_completed.ipynb  pyproject.toml
data_output/: dfi_pruned.csv  dfm.csv  dfm_pruned.csv  dfm_very_pruned.csv
src/: main.py  naiveBayes.py
src/naive_bayes/: GaussianNaiveBayesClassifier.py  MultinomialNaiveBayesClassifier.py  Opis_i_benchmark_NBC.ipynb  benchmark.py  benchmark_MNBC.txt  main.py
