[project]
name = "naive_bayes"
version = ""
requires-python = ">=3.12.8"
readme = "README.md"

[tool.poetry]
name = "naive_bayes"
version = "0.1.0"
description = "Naive Bayes classifier. Assumes that the traits are independent"
authors = ["Hubert Miklas <hubert.j.miklas@gmail.com>, Dominik Kozimor <email>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.2.0"
numpy = "^1.23.0"
pandas = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/Hbrtjm/Naive_Bayes_Project"
Issues = "https://github.com/Hbrtjm/Naive_Bayes_Project/issues"